moved from gin and extensive library usage to use as much as standard library as possible
